--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coreui-angular-dev",
+  "name": "coreui-angular-ex",
   "version": "4.5.14",
   "description": "CoreUI Components Library for Angular",
   "copyright": "Copyright 2023 creativeLabs Łukasz Holeczek",
