--- a/projects/coreui-angular/package.json
+++ b/projects/coreui-angular/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@coreui/angular",
+  "name": "@coreui/angular-ex",
   "version": "4.5.14",
   "description": "CoreUI for Angular UI components library",
   "copyright": "Copyright 2023 creativeLabs Łukasz Holeczek",
