--- a/projects/coreui-icons-angular/package.json
+++ b/projects/coreui-icons-angular/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@coreui/icons-angular",
+  "name": "@coreui/icons-angular-ex",
   "version": "4.5.13",
   "description": "CoreUI Icons Angular component and service",
   "copyright": "Copyright 2023 creativeLabs Łukasz Holeczek",
